--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <hr id="hr-row">
         <div>
 
-            <button id="reset">Reset</button>
+            <button id="reset" onclick="reset()">Reset</button>
         </div>
     </div>
     <script src="./script.js"></script>
